# WAFL-Testbed

./: .pre-commit-config.yaml  README.md
Vanilla/: pyproject.toml
Vanilla/ctrl/: analyze.py  collect.py  deploy.sh  execution_config  main.py  parameters.json
Vanilla/results/WAFL-VANILLA-20260213T184142/202/: learning-data.csv  network-data.csv
Vanilla/results/WAFL-VANILLA-20260213T184142/203/: learning-data.csv  network-data.csv
Vanilla/utils/contact_pattern/: contact_pattern.json
Vanilla/wafl/src/common/: main.py
